@@ -68,6 +68,10 @@
       <groupId>org.eclipse.scout.widgets</groupId>
       <artifactId>org.eclipse.scout.jswidgets.ui.html.app</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.scout.rt</groupId>
+      <artifactId>org.eclipse.scout.rt.rest.jackson</artifactId>
+    </dependency>
 
     <!-- Logging -->
     <dependency>
