@@ -62,6 +62,16 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <filter>
+    <filter-name>HttpRunContextFilter</filter-name>
+    <filter-class>org.eclipse.scout.rt.server.commons.context.HttpRunContextFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>HttpRunContextFilter</filter-name>
+    <servlet-name>apiServlet</servlet-name>
+  </filter-mapping>
+
   <session-config>
     <!-- Session timeout in minutes -->
     <session-timeout>60</session-timeout>
