@@ -7,7 +7,8 @@
  *
  * SPDX-License-Identifier: EPL-2.0
  */
-import {Button, FormField, FormModel, GroupBox, StringField} from '@eclipse-scout/core';
+import {Button, FormField, FormModel, GroupBox, SmartField, StringField} from '@eclipse-scout/core';
+import {RestExceptionLookupCall} from '../index';
 
 export default (): FormModel => ({
   id: 'jswidgets.RestForm',
@@ -19,53 +20,75 @@ export default (): FormModel => ({
       {
         id: 'DetailBox',
         objectType: GroupBox,
-        gridColumnCount: 3,
+        gridColumnCount: 1,
         fields: [
           {
-            id: 'GetButton',
-            objectType: Button,
-            label: 'Do a GET request',
-            processButton: false,
-            gridDataHints: {
-              useUiWidth: true,
-              weightX: 0
-            }
+            id: 'RequestBox',
+            objectType: GroupBox,
+            label: 'Requests',
+            gridColumnCount: 4,
+            fields: [
+              {
+                id: 'GetButton',
+                objectType: Button,
+                label: 'Do a GET request',
+                processButton: false,
+                gridDataHints: {
+                  useUiWidth: true,
+                  weightX: 0
+                }
+              },
+              {
+                id: 'PostButton',
+                objectType: Button,
+                label: 'Do a POST request',
+                processButton: false,
+                gridDataHints: {
+                  useUiWidth: true,
+                  weightX: 0
+                }
+              },
+              {
+                id: 'PutButton',
+                objectType: Button,
+                label: 'Do a PUT request',
+                processButton: false,
+                gridDataHints: {
+                  useUiWidth: true,
+                  weightX: 0
+                }
+              },
+              {
+                id: 'DeleteButton',
+                objectType: Button,
+                label: 'Do a DELETE request',
+                processButton: false,
+                gridDataHints: {
+                  useUiWidth: true,
+                  weightX: 0
+                }
+              }
+            ]
           },
           {
-            id: 'PostButton',
-            objectType: Button,
-            label: 'Do a POST request',
-            processButton: false,
-            gridDataHints: {
-              useUiWidth: true,
-              weightX: 0
-            }
-          },
-          {
-            id: 'PutButton',
-            objectType: Button,
-            label: 'Do a PUT request',
-            processButton: false,
-            gridDataHints: {
-              useUiWidth: true,
-              weightX: 0
-            }
-          },
-          {
-            id: 'DeleteButton',
-            objectType: Button,
-            label: 'Do a DELETE request',
-            processButton: false,
-            gridDataHints: {
-              useUiWidth: true,
-              weightX: 0
-            }
-          },
-          {
-            id: 'FailButton',
-            objectType: Button,
-            label: 'Do a failing request',
-            processButton: false
+            id: 'ErrorBox',
+            objectType: GroupBox,
+            label: 'Error Requests',
+            gridColumnCount: 4,
+            fields: [
+              {
+                id: 'ExceptionTypeField',
+                objectType: SmartField,
+                label: 'Rest Exception',
+                lookupCall: RestExceptionLookupCall,
+                value: 1000
+              }, {
+                id: 'FailButton',
+                objectType: Button,
+                label: 'Do a failing request',
+                processButton: false
+              }
+            ]
           },
           {
             id: 'LogField',
@@ -85,13 +108,20 @@ export default (): FormModel => ({
   }
 });
 
+/* **************************************************************************
+* GENERATED WIDGET MAPS
+* **************************************************************************/
+
 export type RestFormWidgetMap = {
   'MainBox': GroupBox;
   'DetailBox': GroupBox;
+  'RequestBox': GroupBox;
   'GetButton': Button;
   'PostButton': Button;
   'PutButton': Button;
   'DeleteButton': Button;
+  'ErrorBox': GroupBox;
+  'ExceptionTypeField': SmartField<any>;
   'FailButton': Button;
   'LogField': StringField;
 };
